исправления по замечаниям наставника

--- a/source/index.html
+++ b/source/index.html
@@ -6,158 +6,173 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="menu-block">
-        <a class="menu-block__link">
+      <div class="page-header-wrapper">
+        <div class="menu-block">
           <img class="menu-block__image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Лого Pink">
-        </a>
-        <button class="menu-block__toggle" type="button">Переключить меню</button>
+          <button class="menu-block__toggle" type="button">Переключить меню</button>
+        </div>
+        <nav class="nav-block">
+          <ul class="nav-block__list nav-list">
+            <li class="nav-list__item nav-list__item--active">
+              <a class="nav-list__link">Главная</a>
+            </li>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="form.html">Конкурс</a>
+            </li>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav class="nav-block">
-        <ul class="nav-block__list nav-list">
-          <li class="nav-list__item nav-list__item--active">
-            <a class="nav-list__link">Главная</a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link" href="photo.html">Фотографии</a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link" href="form.html">Конкурс</a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          </li>
-        </ul>
-      </nav>
     </header>
-    <main class="page-main--index">
-      <h1 class="visually-hidden">PINK раскрасит вашу жизнь в розовый цвет!</h1>
-      <section class="app-preview">
-        <h2 class="app-preview__slogan">Взгляните на жизнь иначе!</h2>
-        <img class="app-preview__photo" src="https://via.placeholder.com/320x314" width="320" height="314" alt="Фото работающего приложения PINK">
-      </section>
-      <section class="app-download">
-        <a class="app-download__link--default" href="#">Скачать приложение</a>
-        <ul class="app-download__list platform-list">
-          <li class="platform-list__item">
-            <a class="platform-list__link--apl" href="https://apps.apple.com">
-              <img class="platform-list__img--apl" src="https://via.placeholder.com/47x56" width="47" height="56" alt="Лого магазина приложений Apple">
-              <span class="visually-hidden">Скачать из магазина Apple</span>
-            </a>
-          </li>
-          <li class="platform-list__item">
-            <a class="platform-list__link--andr" href="https://play.google.com">
-              <img class="platform-list__img--andr" src="https://via.placeholder.com/43x47" width="43" height="47" alt="Лого магазина приложений Google">
-              <span class="visually-hidden">Скачать из магазина Android</span>
-            </a>
-          </li>
-          <li class="platform-list__item">
-            <a class="platform-list__link--win" href="https://www.microsoft.com/ru-ru/store/apps">
-              <img class="platform-list__img--win" src="https://via.placeholder.com/44x41" width="44" height="41" alt="Лого магазина приложений Windows">
-              <span class="visually-hidden">Скачать из магазина Windows</span>
-            </a>
-          </li>
-        </ul>
-        <p class="app-download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-      </section>
-      <section class="advantages">
-        <h2 class="advantages__main">Устали от серости мегаполиса?<br><br>Нам есть, что вам предложить!</h2>
-        <ul class="advantages-list">
-          <li class="advantages-list__item">
-            <h3 class="advantages-list__title">Поднимает настроение</h3>
-            <p class="advantages-list__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-          </li>
-          <li class="advantages-list__item">
-            <h3 class="advantages-list__title">Меняет мир вокруг</h3>
-            <p class="advantages-list__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-          </li>
-          <li class="advantages-list__item">
-            <h3 class="advantages-list__title">Заводит новых друзей</h3>
-            <p class="advantages-list__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-          </li>
-        </ul>
-        <img class="advantages__image" src="https://via.placeholder.com/157x320" width="157" height="320" alt="Фото телефона с запущенным приложением">
-      </section>
-      <section class="review">
-        <ul class="review-list">
-          <li class="review-list__item">
-            <h3 class="review-list__author">Николай Петров</h3>
-            <p class="review-list__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </li>
-          <li class="review-list__item">
-            <h3 class="review-list__author">Николай Петров</h3>
-            <p class="review-list__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </li>
-          <li class="review-list__item">
-            <h3 class="review-list__author">Николай Петров</h3>
-            <p class="review-list__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </li>
-        </ul>
-        <div class="slider-buttons">
-          <button class="slider-buttons__button slider-buttons_button--current" type="button">1</button>
-          <button class="slider-buttons__button" type="button">2</button>
-          <button class="slider-buttons__button" type="button">3</button>
-        </div>
-      </section>
-      <section class="tariff">
-        <ul class="tariff-list">
-          <li class="tariff-list__item">
-            <div class="tariff-heading--hit">
-              <span class="tariff-heading__tariff-name">Стандарт</span>
-              <span class="tariff-heading__price">3,99 USD</span>
-            </div>
-            <ul class="tariff-options">
-              <li class="tariff-options__item"><span>Розовый фильтр</span></li>
-              <li class="tariff-options__item"><span>Смайлики</span></li>
-              <li class="tariff-options__item"><span>Комментарии</span></li>
+    <main class="page-main-index">
+      <div class="page-main-index-wrapper">
+        <h1 class="visually-hidden">PINK раскрасит вашу жизнь в розовый цвет!</h1>
+        <section class="page-intro page-intro--index">
+          <div class="page-intro-wrapper">
+            <h2 class="page-intro__slogan">Взгляните на жизнь иначе!</h2>
+            <img class="page-intro__photo" src="https://via.placeholder.com/320x314" width="320" height="314" alt="Фото работающего приложения PINK">
+          </div>
+        </section>
+        <section class="app-download-section">
+          <div class="app-download">
+            <a class="app-download__link app-download__link--default" href="#">Скачать приложение</a>
+            <ul class="app-download__list platform-list">
+              <li class="platform-list__item">
+                <a class="platform-list__link" href="https://apps.apple.com">
+                  <img class="platform-list__img platform-list__img--apl" src="https://via.placeholder.com/47x56" width="47" height="56" alt="Лого магазина приложений Apple">
+                  <h2 class="visually-hidden">Скачать из магазина Apple</h2>
+                </a>
+              </li>
+              <li class="platform-list__item">
+                <a class="platform-list__link" href="https://play.google.com">
+                  <img class="platform-list__img platform-list__img--andr" src="https://via.placeholder.com/43x47" width="43" height="47" alt="Лого магазина приложений Google">
+                  <h2 class="visually-hidden">Скачать из магазина Android</h2>
+                </a>
+              </li>
+              <li class="platform-list__item">
+                <a class="platform-list__link" href="https://www.microsoft.com/ru-ru/store/apps">
+                  <img class="platform-list__img platform-list__img--win" src="https://via.placeholder.com/44x41" width="44" height="41" alt="Лого магазина приложений Windows">
+                  <h2 class="visually-hidden">Скачать из магазина Windows</h2>
+                </a>
+              </li>
             </ul>
-          </li>
-          <li class="tariff-list__item">
-            <div class="tariff-heading--hit">
-              <span class="tariff-heading__tariff-name">Стандарт</span>
-              <span class="tariff-heading__price">3,99 USD</span>
-            </div>
-            <ul class="tariff-options">
-              <li class="tariff-options__item"><span>Розовый фильтр</span></li>
-              <li class="tariff-options__item"><span>Смайлики</span></li>
-              <li class="tariff-options__item"><span>Комментарии</span></li>
+            <p class="app-download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          </div>
+        </section>
+        <section class="advantages-section">
+          <div class="advantages">
+            <h2 class="advantages__heading">Устали от серости мегаполиса?</h2>
+            <h2 class="advantages__heading">Нам есть, что вам предложить!</h2>
+            <ul class="advantages-list">
+              <li class="advantages-list__item">
+                <h3 class="advantages-list__title">Поднимает настроение</h3>
+                <p class="advantages-list__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+              </li>
+              <li class="advantages-list__item">
+                <h3 class="advantages-list__title">Меняет мир вокруг</h3>
+                <p class="advantages-list__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              </li>
+              <li class="advantages-list__item">
+                <h3 class="advantages-list__title">Заводит новых друзей</h3>
+                <p class="advantages-list__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+              </li>
             </ul>
-          </li>
-          <li class="tariff-list__item">
-            <div class="tariff-heading--hit">
-              <span class="tariff-heading__tariff-name">Стандарт</span>
-              <span class="tariff-heading__price">3,99 USD</span>
-            </div>
-            <ul class="tariff-options">
-              <li class="tariff-options__item"><span>Розовый фильтр</span></li>
-              <li class="tariff-options__item"><span>Смайлики</span></li>
-              <li class="tariff-options__item"><span>Комментарии</span></li>
+            <img class="advantages__image" src="https://via.placeholder.com/157x320" width="157" height="320" alt="Фото телефона с запущенным приложением">
+          </div>
+        </section>
+        <section class="review-section">
+          <div class="review">
+            <ul class="review-list">
+              <li class="review-list__item">
+                <h3 class="review-list__author">Николай Петров</h3>
+                <p class="review-list__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              </li>
+              <li class="review-list__item">
+                <h3 class="review-list__author">Николай Петров</h3>
+                <p class="review-list__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              </li>
+              <li class="review-list__item">
+                <h3 class="review-list__author">Николай Петров</h3>
+                <p class="review-list__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              </li>
             </ul>
-          </li>
-        </ul>
-        <div class="slider-buttons">
-          <button class="slider-buttons__button" type="button">1</button>
-          <button class="slider-buttons__button slider-buttons_button--current" type="button">2</button>
-          <button class="slider-buttons__button" type="button">3</button>
-        </div>
-      </section>
+            <div class="slider-buttons">
+              <button class="slider-buttons__item slider-buttons__item--current" type="button">1</button>
+              <button class="slider-buttons__item" type="button">2</button>
+              <button class="slider-buttons__item" type="button">3</button>
+            </div>
+          </div>
+        </section>
+        <section class="tariff-section">
+          <div class="tariff">
+            <ul class="tariff-list">
+              <li class="tariff-list__item">
+                <div class="tariff-heading tariff-heading--hit">
+                  <h2 class="tariff-heading__tariff-name">Стандарт</h2>
+                  <span class="tariff-heading__price">3,99 USD</span>
+                </div>
+                <ul class="tariff-options">
+                  <li class="tariff-options__item"><span>Розовый фильтр</span></li>
+                  <li class="tariff-options__item"><span>Смайлики</span></li>
+                  <li class="tariff-options__item"><span>Комментарии</span></li>
+                </ul>
+              </li>
+              <li class="tariff-list__item">
+                <div class="tariff-heading tariff-heading--hit">
+                  <h2 class="tariff-heading__tariff-name">Стандарт</h2>
+                  <span class="tariff-heading__price">3,99 USD</span>
+                </div>
+                <ul class="tariff-options">
+                  <li class="tariff-options__item"><span>Розовый фильтр</span></li>
+                  <li class="tariff-options__item"><span>Смайлики</span></li>
+                  <li class="tariff-options__item"><span>Комментарии</span></li>
+                </ul>
+              </li>
+              <li class="tariff-list__item">
+                <div class="tariff-heading tariff-heading--hit">
+                  <h2 class="tariff-heading__tariff-name">Стандарт</h2>
+                  <span class="tariff-heading__price">3,99 USD</span>
+                </div>
+                <ul class="tariff-options">
+                  <li class="tariff-options__item"><span>Розовый фильтр</span></li>
+                  <li class="tariff-options__item"><span>Смайлики</span></li>
+                  <li class="tariff-options__item"><span>Комментарии</span></li>
+                </ul>
+              </li>
+            </ul>
+            <div class="slider-buttons">
+              <button class="slider-buttons__item" type="button">1</button>
+              <button class="slider-buttons__item slider-buttons__item--current" type="button">2</button>
+              <button class="slider-buttons__item" type="button">3</button>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
     <footer class="page-footer-index">
-      <div class="page-footer-index__text">Остались вопросы? Свяжитесь с нами!</div>
-      <ul class="page-footer-index__contacts contacts-list">
-        <li class="contacts-list__item">
-          <span class="contacts-list__text">Звоните:</span>
-          <a class="contacts-list__link--tel" href="tel:+78125556666">+7 (812) 555-66-66</a>
-        </li>
-        <li class="contacts-list__item">
-          <span class="contacts-list__text">Пишите:</span>
-          <a class="contacts-list__link--mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </li>
-        <li class="contacts-list__item">
-          <span class="contacts-list__text">Приезжайте в гости:</span>
-          <a class="contacts-list__link-addr">ул. Большая Конюшенная, 19/8</a>
-        </li>
-      </ul>
-      <div class="page-footer-index__map"></div>
+      <div class="page-footer-index-wrapper">
+        <div class="page-footer-index__text">Остались вопросы? Свяжитесь с нами!</div>
+        <ul class="page-footer-index__contacts contacts-list">
+          <li class="contacts-list__item">
+            <span class="contacts-list__text">Звоните:</span>
+            <a class="contacts-list__link--tel" href="tel:+78125556666">+7 (812) 555-66-66</a>
+          </li>
+          <li class="contacts-list__item">
+            <span class="contacts-list__text">Пишите:</span>
+            <a class="contacts-list__link--mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </li>
+          <li class="contacts-list__item">
+            <span class="contacts-list__text">Приезжайте в гости:</span>
+            <a class="contacts-list__link-addr">ул. Большая Конюшенная, 19/8</a>
+          </li>
+        </ul>
+        <div class="page-footer-index__map"></div>
+      </div>
     </footer>
   </body>
 </html>
