--- a/source/form.html
+++ b/source/form.html
@@ -32,14 +32,14 @@
       </div>
     </header>
     <main class="page-main-form">
-      <div class="page-main-form-wrapper">
-        <h1 class="visually-hidden">Участвуйте в конкурсе PINK</h1>
-        <section class="page-intro page-intro--form">
-          <div class="page-intro-wrapper">
-            <h2 class="page-intro__slogan">Конкурс на самое безбашенное путешествие с Пинк</h2>
-          </div>
-        </section>
-        <form class="challenge-form" action="https://echo.htmlacademy.ru" method="post">
+      <h1 class="visually-hidden">Участвуйте в конкурсе PINK</h1>
+      <section class="page-intro page-intro--form">
+        <div class="container">
+          <h2 class="page-intro__slogan">Конкурс на самое безбашенное путешествие с Пинк</h2>
+        </div>
+      </section>
+      <form class="challenge-form" action="https://echo.htmlacademy.ru" method="post">
+        <div class="container">
           <p class="challenge-form__text">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:</p>
           <ul class="personals-block">
             <li class="personals-block__item input-block">
@@ -117,15 +117,20 @@
           </div>
           <button class="challenge-form__button" type="submit">Отправить форму</button>
           <p class="challenge-form__reminder"><span class="challenge-form__reminder challenge-form__reminder--star">*</span> — обязательные поля</p>
-        </form>
-        <div class="popup-form-fail">
+        </div>
+      </form>
+      <div class="popup-form-fail">
+        <div class="container">
           <h2 class="popup-form-fail__heading">Что-то пошло не так!</h2>
           <p class="popup-form-fail__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
           <button class="popup-form-fail__button" type="button">OK</button>
         </div>
-        <div class="popup-form-success">
+      </div>
+      <div class="popup-form-success">
+        <div class="container">
           <h2 class="popup-form-success__heading">Ваша заявка отправлена</h2>
-          <p class="popup-form-success__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+          <p class="popup-form-success__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.
+          </p>
           <div class="popup-form-success__button-wrapper">
             <button class="popup-form-success__button" type="button">ЗАКРЫТЬ ОКНО</button>
           </div>
@@ -133,7 +138,7 @@
       </div>
     </main>
     <footer class="page-footer">
-      <div class="page-footer-wrapper">
+      <div class="container">
         <img class="page-footer__logo" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип футера">
         <ul class="footer-socials-block">
           <li class="footer-social-block__item social-button">
